# Meeting_notes_summarizer_and_action_tracker

backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py  vector_store.py
backend/app/config/: settings.py
backend/app/database/: mongo.py
backend/app/models/: action.py  meeting.py  user.py
backend/app/routes/: action_routes.py  auth_routes.py  meeting_routes.py
backend/app/services/: llm_service.py  meeting_service.py
backend/app/utils/: auth.py  dependencies.py  parser.py  prompt_template.py  text_splitter.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: api.js
frontend/src/components/: ActionCard.jsx  Navbar.jsx  ProtectedRoute.jsx  StatusBadge.jsx
frontend/src/pages/: ActionsDashboard.jsx  CreateMeeting.jsx  History.jsx  Landing.jsx  Login.jsx  MeetingDetails.jsx  Signup.jsx
